# Variational-Encoder-From-Scratch-Pytorch

./: pyproject.toml
notebooks/: data.ipynb  model_testing.ipynb
src/: inference.ipynb  main.py  model.py  train.py
