[project]
name = "variational-encoder-from-scratch-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.9.4",
    "pillow>=11.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
